Fixed alignment on help page

--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -4,5 +4,5 @@ img {
 }
 
 .padded {
-  padding: 25px;
+  padding: 5px 15px;
 }
